day 12
+ update to Java 11