@@ -11,12 +11,12 @@ public class GameOneTest {
 
 	@Test
 	public void testExemple1() {
-		Assert.assertEquals(new Long(514579), gameOne.play(Arrays.asList(1721, 979, 366, 299, 675, 1456)));
+		Assert.assertEquals(Long.valueOf(514579), gameOne.play(Arrays.asList(1721, 979, 366, 299, 675, 1456)));
 	}
 
 	@Test
 	public void testGame() {
-		Assert.assertEquals(new Long(121396), gameOne.play());
+		Assert.assertEquals(Long.valueOf(121396), gameOne.play());
 	}
 
 }
