@@ -11,12 +11,12 @@ public class GameTwoTest {
 
 	@Test
 	public void testExemple1() {
-		Assert.assertEquals(new Long(241861950), gameTwo.play(Arrays.asList(1721, 979, 366, 299, 675, 1456)));
+		Assert.assertEquals(Long.valueOf(241861950), gameTwo.play(Arrays.asList(1721, 979, 366, 299, 675, 1456)));
 	}
 
 	@Test
 	public void testGame() {
-		Assert.assertEquals(new Long(73616634), gameTwo.play());
+		Assert.assertEquals(Long.valueOf(73616634), gameTwo.play());
 	}
 	
 }
