@@ -14,14 +14,14 @@ public class GameOneTest {
 
 	@Test
 	public void testExemple1() {
-		Assert.assertEquals(new Long(2),
+		Assert.assertEquals(Long.valueOf(2),
 				gameOne.play(Arrays.asList("1-3 a: abcde", "1-3 b: cdefg", "2-9 c: ccccccccc")));
 	}
 
 	@Test
 	public void testGame() {
 		LoggerUtils.setLevel(Level.INFO);
-		Assert.assertEquals(new Long(638), gameOne.play());
+		Assert.assertEquals(Long.valueOf(638), gameOne.play());
 	}
 
 }
