@@ -14,14 +14,14 @@ public class GameTwoTest {
 
 	@Test
 	public void testExemple1() {
-		Assert.assertEquals(new Long(1),
+		Assert.assertEquals(Long.valueOf(1),
 				gameTwo.play(Arrays.asList("1-3 a: abcde", "1-3 b: cdefg", "2-9 c: ccccccccc")));
 	}
 
 	@Test
 	public void testGame() {
 		LoggerUtils.setLevel(Level.INFO);
-		Assert.assertEquals(new Long(699), gameTwo.play());
+		Assert.assertEquals(Long.valueOf(699), gameTwo.play());
 	}
 
 }
